--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,8 @@
         "psr-4": {
             "App\\": "src/"
         }
+    },
+    "scripts": {
+        "start": "php -S localhost:5000 -t=public"
     }
 }
