--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "pablo/proyectoblog",
-    "require": {},
+    "require": {
+        "twig/twig": "^2.11"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "src/"
