finish debugger_logger

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "name": "pablo/proyectoblog",
     "require": {
-        "twig/twig": "^2.11"
+        "twig/twig": "^2.11",
+        "kint-php/kint": "^3.2",
+        "monolog/monolog": "^1.24"
     },
     "autoload": {
         "psr-4": {
